--- a/HTML/images/images.html
+++ b/HTML/images/images.html
@@ -8,7 +8,7 @@
 <!-- Images -->
     <img src="https://images.bgit.rs/1499413498/desktop/partners-list/287dragan_tomic.png" alt="Dragan Tomic"/>
 
-    <img src="ivan_andric.png" alt="Ivan Andric"/>
+    <img src="./ivan_andric.png" alt="Ivan Andric"/>
 
 </body>
 </html>
