--- a/CSS/Intro/external.html
+++ b/CSS/Intro/external.html
@@ -4,18 +4,17 @@
 <head>
     <title> External CSS </title>
     <!-- External CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
     <p class="container"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni nemo distinctio, dolores,
-        accusantium eveniet eos, temporibus a omnis ipsum corrupti perspiciatis dolor fugiat magnam voluptates aliquid
-        eaque tenetur amet est. </p>
+    accusantium eveniet eos, temporibus a omnis ipsum corrupti perspiciatis dolor fugiat magnam voluptates aliquid
+    eaque tenetur amet est. </p>
     <h1> This is heading 1! </h1>
     <h2> This is heading 2! </h2>
 
-    <img src="https://images.pexels.com/photos/50577/hedgehog-animal-baby-cute-50577.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-        alt="This is a hedgehog.">
+    <img src="https://images.pexels.com/photos/50577/hedgehog-animal-baby-cute-50577.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="This is a hedgehog.">
 
     <table>
 
@@ -75,8 +74,8 @@
     </table>
 
     <p id="footer"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis non quasi architecto hic
-        aspernatur magni vero a placeat porro mollitia numquam sunt, ad incidunt aperiam aliquid magnam quas dignissimos
-        enim? </p>
+    aspernatur magni vero a placeat porro mollitia numquam sunt, ad incidunt aperiam aliquid magnam quas dignissimos
+    enim? </p>
 
 </body>
 
