--- a/HTML/images/raster-vs-vector.html
+++ b/HTML/images/raster-vs-vector.html
@@ -8,7 +8,7 @@
 
 <body>
 <!-- Raster VS Vector -->
-    <img src="forest-woods.svg" align="right" width="1000px" alt="Forest" />
+    <img src="./forest-woods.svg" align="right" width="1000px" alt="Forest" />
 
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Sunflower_from_Silesia2.jpg/800px-Sunflower_from_Silesia2.jpg?20091008132228" align="right" width="1000px" alt="Sunflower" />
 
